--- a/project/homepage.html
+++ b/project/homepage.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NBA Team Rankings</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NBA Team Rankings</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>NBA Team Rankings</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="rankings.html">Team Rankings</a>
-      <a href="players.html">Star Players</a>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h2>Are you ready to discover the best team in the NBA?</h2>
-      <p>Explore team rankings, player stats, and in-depth analyses to find out which NBA team is dominating this season.</p>
-      <img src="../pictures/pic1.jpg" alt="NBA Home Image" width="200">
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 NBA Team Rankings</p>
-  </footer>
+    <header>
+        <h1>NBA Team Rankings</h1>
+        <nav>
+            <a href="homepage.html">Home</a>
+            <a href="rank.html">Team Rankings</a>
+            <a href="players.html">Star Players</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Are you ready to discover the best team in the NBA?</h2>
+            <p>Explore team rankings, player stats, and in-depth analyses to find out which NBA team is dominating this season.</p>
+            <img src="pictures/pic1.jpg" alt="NBA Home Image" width="400">
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 NBA Team Rankings</p>
+    </footer>
 </body>
 </html>
