--- a/project/players.html
+++ b/project/players.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>NBA Team Rankings</title>
+    <meta charset="UTF-8">
+    <title>NBA Star Players</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>NBA Team Rankings</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="rankings.html">Team Rankings</a>
-      <a href="players.html">Star Players</a>
-    </nav>
-  </header>
-  <main>
-    <article>
-      <h2>Denver Nuggets</h2>
-      <p>Record: 50 Wins, 12 Losses</p>
-      <p>Star Player: Nikola Jokić</p>
-    </article>
-    <article>
-      <h2>Boston Celtics</h2>
-      <p>Record: 48 Wins, 14 Losses</p>
-      <p>Star Player: Jayson Tatum</p>
-    </article>
-    <img src="../pictures/pic2.jpg" alt="NBA Rankings Image" width="200">
-  </main>
-  <footer>
-    <p>&copy; 2024 NBA Team Rankings</p>
-  </footer>
+    <header>
+        <h1>NBA Star Players</h1>
+        <nav>
+            <a href="homepage.html">Home</a>
+            <a href="rank.html">Team Rankings</a>
+            <a href="players.html">Star Players</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Top Players of the Season</h2>
+            <ul>
+                <li>Nikola Jokić - Denver Nuggets</li>
+                <li>Jayson Tatum - Boston Celtics</li>
+                <li>Giannis Antetokounmpo - Milwaukee Bucks</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 NBA Team Rankings</p>
+    </footer>
 </body>
 </html>
