--- a/lab13/index.html
+++ b/lab13/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <!-- Skip to Content -->
+    <a href="#maincontent" class="skip-link">Skip to Content</a>
+
     <!-- Navigation Bar -->
     <nav>
         <a href="index.html">Home</a> <span>|</span>
@@ -21,9 +24,9 @@
     </header>
 
     <!-- Main Content Section -->
-    <main class="container">
+    <main id="maincontent" class="container">
         <div class="profile-container">
-            <img src="lab09/headshot.png" alt="Christopher Biniaris" class="profile-image">
+            <img src="lab10/headshot.png" alt="Christopher Biniaris smiling in front of a building" class="profile-image">
             <div class="text-overlay">
                 <h2>Chris Loves to Code</h2>
                 <p>HTML</p>
