--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <!-- Skip to Content -->
+    <a href="#maincontent" class="skip-link">Skip to Content</a>
+
     <!-- Navigation Bar -->
     <nav>
         <a href="index.html">Home</a> <span>|</span>
@@ -16,7 +19,7 @@
     </nav>
 
     <!-- Header Section -->
-    <h1>Technical Skills</h1>
+    <h1 id="maincontent">Technical Skills</h1>
 
     <!-- Skills Table Section -->
     <div class="firstrow">
@@ -86,7 +89,7 @@
 
         <!-- Skills Image Section -->
         <div class="skillsimage">
-            <img src="Skills-pic.png" alt="Skills Image" class="responsive-img">
+            <img src="Skills-pic.png" alt="Graphic of skill-related icons" class="responsive-img">
         </div>
     </div>
 
