--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -19,7 +19,9 @@
     </nav>
 
     <!-- Header Section -->
-    <h1 id="maincontent">Technical Skills</h1>
+    <header>
+        <h1 id="maincontent">Technical Skills</h1>
+    </header>
 
     <!-- Skills Table Section -->
     <div class="firstrow">
@@ -89,9 +91,14 @@
 
         <!-- Skills Image Section -->
         <div class="skillsimage">
-            <img src="Skills-pic.png" alt="Graphic of skill-related icons" class="responsive-img">
+            <img src="Skills-pic.png" alt="Illustration of icons representing various skills, including photography, cooking, and fitness" class="responsive-img">
         </div>
     </div>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Christopher Biniaris</p>
+    </footer>
 
 </body>
 </html>
