--- a/project/homepage.html
+++ b/project/homepage.html
@@ -17,9 +17,23 @@
     </header>
     <main>
         <section>
-            <h2>Are you ready to discover the best team in the NBA?</h2>
-            <p>Explore team rankings, player stats, and in-depth analyses to find out which NBA team is dominating this season.</p>
-            <img src="pictures/pic1.jpg" alt="NBA Home Image" width="400">
+            <h2>Welcome to NBA Team Rankings</h2>
+            <p>Your ultimate destination for in-depth analysis and rankings of the best NBA teams and players!</p>
+            <img src="../IST project/Homepage.jpg" alt="NBA Homepage Image" width="400">
+        </section>
+        <section>
+            <h2>Featured Team: Denver Nuggets</h2>
+            <p>The reigning champions continue to dominate the league with a stellar record of 50 wins and 12 losses. 
+               Led by MVP Nikola Jokić, they are a force to be reckoned with this season.</p>
+            <img src="IST project/denver_image.jpg" alt="Denver Nuggets" width="300">
+        </section>
+        <section>
+            <h2>Upcoming Games</h2>
+            <ul>
+                <li>Boston Celtics vs. Milwaukee Bucks - Dec 5</li>
+                <li>Golden State Warriors vs. LA Lakers - Dec 7</li>
+                <li>Denver Nuggets vs. Phoenix Suns - Dec 9</li>
+            </ul>
         </section>
     </main>
     <footer>
