--- a/project/players.html
+++ b/project/players.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Star Players</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,14 +16,48 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Top Players of the Season</h2>
-            <ul>
-                <li>Nikola Jokić - Denver Nuggets</li>
-                <li>Jayson Tatum - Boston Celtics</li>
-                <li>Giannis Antetokounmpo - Milwaukee Bucks</li>
-            </ul>
-        </section>
+        <h2>Best Players and Their PPG</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Team</th>
+                    <th>Best Player</th>
+                    <th>PPG (2023-24)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>Atlanta Hawks</td><td>Trae Young</td><td>26.2</td></tr>
+                <tr><td>Boston Celtics</td><td>Jayson Tatum</td><td>30.1</td></tr>
+                <tr><td>Brooklyn Nets</td><td>Mikal Bridges</td><td>19.6</td></tr>
+                <tr><td>Charlotte Hornets</td><td>LaMelo Ball</td><td>31.1</td></tr>
+                <tr><td>Chicago Bulls</td><td>Zach LaVine</td><td>24.8</td></tr>
+                <tr><td>Cleveland Cavaliers</td><td>Donovan Mitchell</td><td>23.6</td></tr>
+                <tr><td>Dallas Mavericks</td><td>Luka Dončić</td><td>29.0</td></tr>
+                <tr><td>Denver Nuggets</td><td>Nikola Jokić</td><td>25.1</td></tr>
+                <tr><td>Detroit Pistons</td><td>Cade Cunningham</td><td>20.0</td></tr>
+                <tr><td>Golden State Warriors</td><td>Stephen Curry</td><td>25.0</td></tr>
+                <tr><td>Houston Rockets</td><td>Alperen Şengün</td><td>21.1</td></tr>
+                <tr><td>Indiana Pacers</td><td>Tyrese Haliburton</td><td>20.7</td></tr>
+                <tr><td>Los Angeles Clippers</td><td>Kawhi Leonard</td><td>23.0</td></tr>
+                <tr><td>Los Angeles Lakers</td><td>Anthony Davis</td><td>25.0</td></tr>
+                <tr><td>Memphis Grizzlies</td><td>Ja Morant</td><td>26.0</td></tr>
+                <tr><td>Miami Heat</td><td>Jimmy Butler</td><td>22.9</td></tr>
+                <tr><td>Milwaukee Bucks</td><td>Giannis Antetokounmpo</td><td>32.4</td></tr>
+                <tr><td>Minnesota Timberwolves</td><td>Anthony Edwards</td><td>27.0</td></tr>
+                <tr><td>New Orleans Pelicans</td><td>Zion Williamson</td><td>25.0</td></tr>
+                <tr><td>New York Knicks</td><td>Jalen Brunson</td><td>24.0</td></tr>
+                <tr><td>Oklahoma City Thunder</td><td>Shai Gilgeous-Alexander</td><td>28.0</td></tr>
+                <tr><td>Orlando Magic</td><td>Franz Wagner</td><td>19.7</td></tr>
+                <tr><td>Philadelphia 76ers</td><td>Tyrese Maxey</td><td>25.9</td></tr>
+                <tr><td>Phoenix Suns</td><td>Devin Booker</td><td>26.0</td></tr>
+                <tr><td>Portland Trail Blazers</td><td>Damian Lillard</td><td>25.0</td></tr>
+                <tr><td>Sacramento Kings</td><td>De'Aaron Fox</td><td>25.0</td></tr>
+                <tr><td>San Antonio Spurs</td><td>Victor Wembanyama</td><td>22.0</td></tr>
+                <tr><td>Toronto Raptors</td><td>Pascal Siakam</td><td>22.0</td></tr>
+                <tr><td>Utah Jazz</td><td>Lauri Markkanen</td><td>24.0</td></tr>
+                <tr><td>Washington Wizards</td><td>Jordan Poole</td><td>20.0</td></tr>
+            </tbody>
+        </table>
     </main>
     <footer>
         <p>&copy; 2024 NBA Team Rankings</p>
