--- a/project/homepage.html
+++ b/project/homepage.html
@@ -5,6 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Team Rankings</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        // Data for featured teams
+        const teams = [
+            {
+                name: "Denver Nuggets",
+                description: "The reigning champions continue to dominate the league with a stellar record of 50 wins and 12 losses. Led by MVP Nikola Jokić, they are a force to be reckoned with this season.",
+                image: "nuggets.jpg"
+            },
+            {
+                name: "Boston Celtics",
+                description: "With Jayson Tatum leading the charge, the Celtics boast one of the most dynamic rosters in the league. A strong season with 48 wins and counting.",
+                image: "celtics.jpg"
+            },
+            {
+                name: "Oklahoma City Thunder",
+                description: "The Thunder are turning heads with Shai Gilgeous-Alexander’s MVP-caliber performances. They're a young team with a bright future.",
+                image: "thunder.jpg"
+            },
+            {
+                name: "New York Knicks",
+                description: "Jalen Brunson and Julius Randle continue to lead the Knicks to impressive victories this season. Madison Square Garden is electric once again.",
+                image: "knicks.jpg"
+            },
+            {
+                name: "Los Angeles Lakers",
+                description: "The Lakers are in championship contention with LeBron James and Anthony Davis showing stellar form this season. A historic franchise chasing another banner.",
+                image: "lakers.jpg"
+            }
+        ];
+
+        // Featured team data
+        const featuredTeam = teams[Math.floor(Math.random() * teams.length)];
+
+        // Schedule data
+        const games = [
+            "New Orleans Pelicans @ Atlanta Hawks - Dec 2, 2024, 4:30 PM PST",
+            "Miami Heat @ Boston Celtics - Dec 2, 2024, 4:30 PM PST",
+            "Los Angeles Lakers @ Minnesota Timberwolves - Dec 2, 2024, 5:00 PM PST",
+            "Brooklyn Nets @ Chicago Bulls - Dec 2, 2024, 5:00 PM PST",
+            "Philadelphia 76ers @ Charlotte Hornets - Dec 3, 2024, 4:00 PM PST",
+            "Washington Wizards @ Cleveland Cavaliers - Dec 3, 2024, 4:00 PM PST",
+            "Milwaukee Bucks @ Detroit Pistons - Dec 3, 2024, 4:00 PM PST",
+            "Orlando Magic @ New York Knicks - Dec 3, 2024, 4:30 PM PST",
+            "Indiana Pacers @ Toronto Raptors - Dec 3, 2024, 4:30 PM PST",
+            "Utah Jazz @ Oklahoma City Thunder - Dec 3, 2024, 5:00 PM PST"
+        ];
+
+        // Populate data dynamically on load
+        document.addEventListener("DOMContentLoaded", () => {
+            // Update featured team
+            document.getElementById("featured-team-name").textContent = featuredTeam.name;
+            document.getElementById("featured-team-description").textContent = featuredTeam.description;
+            document.getElementById("featured-team-image").src = featuredTeam.image;
+            document.getElementById("featured-team-image").alt = featuredTeam.name;
+
+            // Update upcoming games
+            const scheduleList = document.getElementById("schedule");
+            games.forEach((game) => {
+                const listItem = document.createElement("li");
+                listItem.textContent = game;
+                scheduleList.appendChild(listItem);
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -19,21 +83,44 @@
         <section>
             <h2>Welcome to NBA Team Rankings</h2>
             <p>Your ultimate destination for in-depth analysis and rankings of the best NBA teams and players!</p>
-            <img src="../IST project/Homepage.jpg" alt="NBA Homepage Image" width="400">
+            <img src="Homepage.jpg" alt="NBA Homepage Image" width="400">
         </section>
         <section>
-            <h2>Featured Team: Denver Nuggets</h2>
-            <p>The reigning champions continue to dominate the league with a stellar record of 50 wins and 12 losses. 
-               Led by MVP Nikola Jokić, they are a force to be reckoned with this season.</p>
-            <img src="IST project/denver_image.jpg" alt="Denver Nuggets" width="300">
+            <h2>Featured Team: <span id="featured-team-name"></span></h2>
+            <p id="featured-team-description"></p>
+            <img id="featured-team-image" src="" alt="" width="400">
+        </section>
+        <section>
+            <h2>Player Highlights</h2>
+            <div class="video-container">
+                <!-- Nikola Jokic Highlights -->
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/vlwCMHjm4BA?si=h9dv4-D2N8H7sBan" 
+                    title="Nikola Jokic Highlights" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+                
+                <!-- Jayson Tatum Highlights -->
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/e3AgSmYvHlU?si=AjORm6ieyHW8Vmvd" 
+                    title="Jayson Tatum Highlights" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+            </div>
         </section>
         <section>
             <h2>Upcoming Games</h2>
-            <ul>
-                <li>Boston Celtics vs. Milwaukee Bucks - Dec 5</li>
-                <li>Golden State Warriors vs. LA Lakers - Dec 7</li>
-                <li>Denver Nuggets vs. Phoenix Suns - Dec 9</li>
-            </ul>
+            <ul id="schedule"></ul>
         </section>
     </main>
     <footer>
